fix the /api/v2/exsiccata/{identifier} endpoint to use eloquent
